Revert "fix conflict on merge with CDE-4768"
This reverts commit 5c752a9f884d1d1eafa182483d3b4547f30cfbdb, reversing
changes made to 9eedc3a293ccae6408ada824e86bed479951d5a4.

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -70,8 +70,7 @@
                 </mat-error>
               </mat-form-field>
               <div fxFlex="10"></div>
-              <div fxLayout="row" fxFlex="25"
-                *ngIf="formNotification.controls['user_group'].value !== 'tsm' && formNotification.controls['content_type'].value !== 'spesific_product_b2b'">
+              <div fxLayout="row" fxFlex="25" *ngIf="formNotification.controls['user_group'].value !== 'tsm'">
                 <mat-form-field fxFlex="50" class="is-light form-primary">
                   <input matInput [matDatepicker]="tanggal_terbit" (focus)="tanggal_terbit.open()"
                     formControlName="date" placeholder="Tanggal Terbit">
@@ -98,14 +97,6 @@
               </div>
             </div>
           </div>
-
-          <!-- spesifik produk b2b -->
-          <div fxLayout="row" *ngIf="formNotification.get('content_type').value === 'spesific_product_b2b'">
-              <search-product-barcode fxFlex="45" (onChange)="handleSearchProduct($event)">
-
-              </search-product-barcode>
-          </div>
-
 
           <!-- Static Page & E-Wallet -->
           <div class="pb-24"
@@ -435,7 +426,7 @@
             <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="30" class="is-light form-primary">
                 <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker"
-                  placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text15}}"
+                  placeholder="{{'manajemen_barang_sku.manajemen_koin.text15' | translate}}"
                   formControlName="recurrence_start_date" [min]="minStartDate">
                 <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
                 <mat-datepicker #startPicker></mat-datepicker>
