--- a/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
+++ b/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
@@ -1,13 +1,13 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Customized Push Notification'">
+  <page-content-header contentTitle="{{'notification.custom_notifikasi.page_name' | translate}}">
   </page-content-header>
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <form autocomplete="off" [formGroup]="formNotification">
         <div fxLayout="row" fxLayoutAlign="space-between center">
-          <h2 class="">Buat Customized Push Notification</h2>
+          <h2 class="">{{'notification.custom_notifikasi.page_name' | translate}}</h2>
         </div>
         <div class="ayo-middle" fxLayout="column">
           <div class="pb-16">
@@ -31,7 +31,7 @@
                 </mat-select>
                 <mat-error
                   *ngIf="formNotification.controls['content_type'].hasError('required') && formNotification.controls['content_type'].touched">
-                  {{'notification.popup_notifikasi.text15' | translate}} harus diisi
+                  {{'notification.popup_notifikasi.text15' | translate}} {{'global.messages.mandatory_text' | translate}}
                 </mat-error>
               </mat-form-field>
             </div>
@@ -46,7 +46,7 @@
                 <mat-datepicker #startPicker></mat-datepicker>
                 <mat-error
                   *ngIf="formNotification.controls['recurrence_start_date'].hasError('required') && formNotification.controls['recurrence_start_date'].touched">
-                  Tanggal mulai harus diisi.
+                  Tanggal mulai {{'global.messages.mandatory_text' | translate}}.
                 </mat-error>
               </mat-form-field>
 
@@ -56,7 +56,7 @@
                 <ngx-material-timepicker #time></ngx-material-timepicker>
                 <mat-error
                   *ngIf="formNotification.controls['recurrence_time'].hasError('required') && formNotification.controls['recurrence_time'].touched">
-                  {{'notification.buat_notifikasi.release_time' | translate}} harus diisi
+                  {{'notification.buat_notifikasi.release_time' | translate}} {{'global.messages.mandatory_text' | translate}}
                 </mat-error>
               </mat-form-field>
             </div>
@@ -91,25 +91,25 @@
           (sort)="onSort($event)"
         >
 
-          <ngx-datatable-column [width]="100" name="ID" prop="id">
+          <ngx-datatable-column [width]="100" name="{{'notification.popup_notifikasi.text2' | translate}}" prop="id">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.id}}
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column [width]="200" name="Target User" prop="target_user">
+          <ngx-datatable-column [width]="200" name="{{'notification.buat_notifikasi.target_user' | translate}}" prop="target_user">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.target_user}}
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column [width]="200" name="Header Notification" prop="header_notification">
+          <ngx-datatable-column [width]="200" name="{{'notification.buat_notifikasi.text9' | translate}}" prop="header_notification">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.header_notification}}
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column [width]="200" name="Content Notification" prop="content_notification">
+          <ngx-datatable-column [width]="200" name="{{'notification.buat_notifikasi.text10' | translate}}" prop="content_notification">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.content_notification}}
             </ng-template>
