--- a/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
+++ b/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
@@ -37,10 +37,10 @@
       <table class="table">
         <thead>
           <tr>
-            <th nowrap>ID</th>
-            <th nowrap>Target User</th>
-            <th nowrap>Header Notification</th>
-            <th nowrap>Content Notification</th>
+            <th nowrap>{{'notification.popup_notifikasi.text2' | translate}}</th>
+            <th nowrap>{{'notification.buat_notifikasi.target_user' | translate}}</th>
+            <th nowrap>{{'notification.buat_notifikasi.text9' | translate}}</th>
+            <th nowrap>{{'notification.buat_notifikasi.text10' | translate}}</th>
             <th nowrap>{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}</th>
             <th nowrap>{{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}}</th>
             <th nowrap>{{ls.locale.global.messages.invalid_reason}}</th>
@@ -87,7 +87,7 @@
         <button type="button" mat-raised-button color="primary" (click)="submit()"
           [disabled]="!is_valid || rows.length === 0">{{ls.locale.global.button.send}}</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-          [disabled]="uploading">Batal</button>
+          [disabled]="uploading">{{'global.button.cancel' | translate}}</button>
       </div>
     </div>
   </div>
