fix spesific barcode on notif && popup-notif

--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -1,4 +1,4 @@
-<mat-form-field fxLayout="row wrap" class="is-light form-primary">
+<mat-form-field fxLayout="row wrap" class="is-light form-primary search-product-barcode">
   <input
     matInput
     placeholder="Barcode Produk"
@@ -29,4 +29,5 @@
   >
     <mat-icon>close</mat-icon>
   </button>
+  <ng-content></ng-content>
 </mat-form-field>
