--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -96,9 +96,15 @@
           </div>
 
           <!-- spesifik produk b2b -->
-          <div fxLayout="row" *ngIf="formNotification.get('content_type').value === 'spesific_product_b2b'">
-              <search-product-barcode fxFlex="45" (onChange)="handleSearchProduct($event)">
-
+          <div fxLayout="row" *ngIf=" formNotification.controls['user_group'].value === 'retailer' && formNotification.get('content_type').value === 'spesific_product_b2b'">
+              <search-product-barcode fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)">
+                <mat-error
+                *ngIf="formNotification.controls['barcode'].hasError('required') && formNotification.controls['barcode'].touched">
+                <!-- {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
+                translate}} -->
+                
+                Barcode Produk Harus diisi
+              </mat-error>
               </search-product-barcode>
           </div>
 
