--- a/src/app/shared/search-product-barcode/search-product-barcode.component.scss
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.scss
@@ -3,3 +3,16 @@
   align-items: center;
   justify-content: center;
 }
+
+.search-product-barcode {
+  ::ng-deep .mat-form-field-wrapper {
+    position: relative;
+    width: 100%;
+  }
+  ::ng-deep .mat-error {
+    position: absolute;
+    top: 100%;
+    margin-top: 8px;
+    font-size: 12px;
+  }
+}
