--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
@@ -343,6 +343,20 @@
             </div>
           </div>
 
+          <!-- spesifik produk b2b -->
+          <div class="pb-24 px-24" *ngIf="formBannerGroup.get('content_type').value === 'spesific_product_b2b'">
+            <div fxLayout="row">
+                <search-product-barcode [disabled]="isDetail" fxFlex="45" [value]="formBannerGroup.get('barcode').value" (onChange)="handleSearchProduct($event)">
+                  <mat-error
+                  *ngIf="formBannerGroup.controls['barcode'].hasError('required') && formBannerGroup.controls['barcode'].touched">
+                  <!-- {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
+                  translate}} -->
+                  Barcode Produk Harus diisi
+                </mat-error>
+                </search-product-barcode>
+            </div>
+          </div>
+
           <!-- Static Page -->
           <div class="pb-24 px-24"
             *ngIf="(formBannerGroup.get('content_type').value === 'static_page' || formBannerGroup.get('content_type').value === 'e_wallet')">
