--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -55,7 +55,8 @@
           <div class="">
             <div fxLayout="row">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="content_type" placeholder="{{'notification.popup_notifikasi.text15' | translate}}"
+                <mat-select formControlName="content_type"
+                  placeholder="{{'notification.popup_notifikasi.text15' | translate}}"
                   (selectionChange)="contentType(formNotification.get('content_type').value)">
                   <mat-option *ngFor="let item of listContentType" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
@@ -65,7 +66,8 @@
                 </mat-error>
               </mat-form-field>
               <div fxFlex="10"></div>
-              <div fxLayout="row" fxFlex="25" *ngIf="formNotification.controls['user_group'].value !== 'tsm'">
+              <div fxLayout="row" fxFlex="25"
+                *ngIf="formNotification.controls['user_group'].value !== 'tsm' && formNotification.controls['content_type'].value !== 'spesific_product_b2b'">
                 <mat-form-field fxFlex="50" class="is-light form-primary">
                   <input matInput [matDatepicker]="tanggal_terbit" (focus)="tanggal_terbit.open()"
                     formControlName="date" placeholder="Tanggal Terbit">
@@ -93,12 +95,27 @@
             </div>
           </div>
 
+          <!-- spesifik produk b2b -->
+          <div fxLayout="row" *ngIf=" formNotification.controls['user_group'].value === 'retailer' && formNotification.get('content_type').value === 'spesific_product_b2b'">
+              <search-product-barcode fxFlex="45" [value]="formNotification.controls['barcode'].value" (onChange)="handleSearchProduct($event)" [disabled]="this.actionType === 'detail'">
+                <mat-error
+                *ngIf="formNotification.controls['barcode'].hasError('required') && formNotification.controls['barcode'].touched">
+                <!-- {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
+                translate}} -->
+                
+                Barcode Produk Harus diisi
+              </mat-error>
+              </search-product-barcode>
+          </div>
+
+
           <!-- Static Page & E-Wallet -->
           <div class="pb-24"
             *ngIf="formNotification.get('content_type').value === 'static_page' || formNotification.get('content_type').value === 'e_wallet'">
             <div fxLayout="row" *ngIf="formNotification.get('content_type').value === 'static_page'">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" formControlName="static_page_title" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">
+                <input matInput type="text" formControlName="static_page_title"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">
                 <mat-error
                   *ngIf="formNotification.controls['static_page_title'].hasError('required') && formNotification.controls['static_page_title'].touched">
                   {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} harus diisi
@@ -108,7 +125,8 @@
             <!-- E-Wallet Content -->
             <div fxLayout="row" *ngIf="formNotification.get('content_type').value === 'e_wallet'">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="content_wallet" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.wallet_type' | translate}}">
+                <mat-select formControlName="content_wallet"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.wallet_type' | translate}}">
                   <mat-option *ngFor="let item of listContentWallet" [value]="item.id">{{item.app_name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -119,7 +137,8 @@
             </div>
             <div fxLayout="row" *ngIf="formNotification.get('content_type').value === 'e_wallet'">
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="text" formControlName="button_text" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text_button' | translate}}">
+                <input matInput type="text" formControlName="button_text"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text_button' | translate}}">
                 <mat-error
                   *ngIf="formNotification.controls['button_text'].hasError('required') && formNotification.controls['button_text'].touched">
                   {{'iklan_dalam_aplikasi.spanduk_online.text_button' | translate}} harus diisi
@@ -146,7 +165,8 @@
           <div class="" *ngIf="formNotification.get('content_type').value === 'landing_page'">
             <div fxLayout="row">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="landing_page_value" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.landing_page_type' | translate}}">
+                <mat-select formControlName="landing_page_value"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.landing_page_type' | translate}}">
                   <mat-option *ngFor="let item of listLandingPage" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -162,10 +182,12 @@
             *ngIf="formNotification.get('content_type').value === 'iframe' || formNotification.get('content_type').value === 'link_web'">
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <input matInput type="url" formControlName="url_link" placeholder="{{'notification.popup_notifikasi.text16' | translate}}">
+                <input matInput type="url" formControlName="url_link"
+                  placeholder="{{'notification.popup_notifikasi.text16' | translate}}">
                 <mat-error
                   *ngIf="formNotification.controls['url_link'].hasError('required') && formNotification.controls['url_link'].touched">
-                  {{'notification.popup_notifikasi.text16' | translate}} {{'global.messages.mandatory_text' | translate}}
+                  {{'notification.popup_notifikasi.text16' | translate}} {{'global.messages.mandatory_text' |
+                  translate}}
                 </mat-error>
                 <mat-error
                   *ngIf="formNotification.controls['url_link'].hasError('pattern') && formNotification.get('url_link').value !== ''">
@@ -182,7 +204,8 @@
             <div fxFlex="30" class="inline-block">
               <div ngfDrop selectable="1" [(validDrag)]="validComboDrag" [(file)]="imageContentType" accept="image/*"
                 class="well my-drop-zone" [class.invalid-drag]="validComboDrag===false"
-                [class.valid-drag]="validComboDrag" (fileChange)="imagesContentType($event)" [innerHTML]="'iklan_dalam_aplikasi.spanduk_online.drag_image' | translate">
+                [class.valid-drag]="validComboDrag" (fileChange)="imagesContentType($event)"
+                [innerHTML]="'iklan_dalam_aplikasi.spanduk_online.drag_image' | translate">
               </div>
             </div>
             <div *ngIf="imageContentType">
@@ -190,7 +213,8 @@
                 class="multiple-img-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted p-12"
                 role="option" tabindex="-1" aria-disabled="false" aria-selected="false">
                 <img [src]="imageContentTypeBase64" class="multiple-img" (click)="previewImage()" />
-                <span class="preview-image-content" (click)="previewImage()">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
+                <span class="preview-image-content"
+                  (click)="previewImage()">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
                 <!-- <mat-icon matTooltip="{{'global.label.delete_image' | translate}}" (click)="removeImageVideo()"
                   class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                   matchipremove="" role="img" aria-hidden="true">cancel</mat-icon> -->
@@ -201,7 +225,8 @@
                 class="multiple-img-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted p-12"
                 role="option" tabindex="-1" aria-disabled="false" aria-selected="false">
                 <img [src]="imagePrivew" class="multiple-img" (click)="previewImage()" />
-                <span class="preview-image-content" (click)="previewImage()">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
+                <span class="preview-image-content"
+                  (click)="previewImage()">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
               </div>
             </div>
           </div>
@@ -226,7 +251,8 @@
                   class="multiple-img-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
                   role="option" tabindex="-1" aria-disabled="false" aria-selected="false" style="height: 60px;">
                   <img [src]="img" class="multiple-img" (click)="previewImage(i)" />
-                  <span class="preview-image-content" (click)="previewImage(i)">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
+                  <span class="preview-image-content"
+                    (click)="previewImage(i)">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}}</span>
                   <mat-icon matTooltip="{{'global.label.delete_image' | translate}}" (click)="removeImageMultiple(i)"
                     class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                     matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
@@ -386,7 +412,8 @@
             </div>
             <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="30" class="is-light form-primary">
-                <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker" placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text15}}"
+                <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker"
+                  placeholder="{{ls.locale.manajemen_barang_sku.manajemen_koin.text15}}"
                   formControlName="recurrence_start_date" [min]="minStartDate">
                 <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
                 <mat-datepicker #startPicker></mat-datepicker>
@@ -414,7 +441,8 @@
                   </mat-form-field>
                   <mat-form-field fxFlex="30" class="is-light form-primary"
                     *ngIf="formRecurrenceCommon.controls.end_option.value === 'end_date'">
-                    <input matInput (focus)="endPicker.open()" [matDatepicker]="endPicker" placeholder="{{'manajemen_barang_sku.produk.end_date' | translate}}"
+                    <input matInput (focus)="endPicker.open()" [matDatepicker]="endPicker"
+                      placeholder="{{'manajemen_barang_sku.produk.end_date' | translate}}"
                       formControlName="recurrence_end_date" [min]="minEndDate">
                     <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
                     <mat-datepicker #endPicker></mat-datepicker>
@@ -453,7 +481,8 @@
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="verification" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text15' | translate}}">
+                <mat-select formControlName="verification"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text15' | translate}}">
                   <mat-option *ngFor="let item of listJenisKonsumen" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -466,7 +495,8 @@
             <div class="">
               <div fxLayout="row">
                 <mat-form-field fxFlex="45" class="is-light form-primary">
-                  <mat-select formControlName="employee" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text13' | translate}}">
+                  <mat-select formControlName="employee"
+                    placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text13' | translate}}">
                     <mat-option *ngFor="let item of listEmployee" [value]="item.value">{{item.name}}</mat-option>
                   </mat-select>
                   <mat-error
@@ -479,8 +509,10 @@
 
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="subscription_status" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.subscription_status' | translate}}">
-                  <mat-option *ngFor="let item of listSubscriptionStatus" [value]="item.value">{{item.name}}</mat-option>
+                <mat-select formControlName="subscription_status"
+                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.subscription_status' | translate}}">
+                  <mat-option *ngFor="let item of listSubscriptionStatus" [value]="item.value">{{item.name}}
+                  </mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="formNotification.controls['subscription_status'].hasError('required') && formNotification.controls['subscription_status'].touched">
@@ -532,11 +564,8 @@
             <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isTargetAudience($event)"
               formControlName="is_target_audience">
               {{'iklan_dalam_aplikasi.spanduk_online.text26' | translate}}</mat-checkbox>
-            <mat-checkbox
-              *ngIf="formNotification.controls['user_group'].value === 'customer'"
-              class="mt-4 ml-20 mb-8"
-              (change)="isTargetArea($event)"
-              formControlName="is_target_area">
+            <mat-checkbox *ngIf="formNotification.controls['user_group'].value === 'customer'" class="mt-4 ml-20 mb-8"
+              (change)="isTargetArea($event)" formControlName="is_target_area">
               {{'iklan_dalam_aplikasi.spanduk_online.target_area' | translate}}</mat-checkbox>
           </div>
           <div
@@ -642,14 +671,16 @@
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all'
+                  ? 'Semua
                   Zona' :
                   item.code}}</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name ===
+                  'all' ? 'Semua
                   Regional'
                   :
                   item.code}}</mat-option>
@@ -657,7 +688,8 @@
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all'
+                  ? 'Semua
                   Area'
                   :
                   item.code}}</mat-option>
@@ -665,7 +697,8 @@
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
+                <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name ===
+                  'all' ?
                   'Semua
                   Salespoint'
                   :
@@ -674,7 +707,8 @@
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.district' | translate}}" formControlName="district" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name ===
+                  'all' ? 'Semua
                   District'
                   :
                   item.code}}</mat-option>
@@ -682,7 +716,8 @@
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
               <mat-select placeholder="{{'global.area.territory' | translate}}" formControlName="territory" multiple>
-                <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name ===
+                  'all' ? 'Semua
                   Territori'
                   :
                   item.code}}</mat-option>
@@ -751,7 +786,8 @@
             <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
               <mat-icon>search</mat-icon>
               <mat-form-field autoComplete="off" class="is-light tab-search">
-                <input matInput formControlName="search" placeholder="{{ls.locale.global.label.search}}" (keyup)="keyUp.next($event.target.value)">
+                <input matInput formControlName="search" placeholder="{{ls.locale.global.label.search}}"
+                  (keyup)="keyUp.next($event.target.value)">
               </mat-form-field>
             </div>
             <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
